规范属性命名